--- a/wms-frontend/index.html
+++ b/wms-frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="#fe8216" />
     <link rel="icon" type="image/svg+xml" href="/1.png" />
     <!-- Google Fonts: Poppins -->
     <link
@@ -10,7 +11,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My WMS</title>
+    <title>WMS</title>
   </head>
   <body>
     <div id="root"></div>
